kubernetes/apps/monitoring/beszel/hub/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beszel-hub
  namespace: beszel
spec:
  type: ClusterIP
  selector:
    app: beszel-hub
  ports:
    - name: http
      port: 8090
      targetPort: http
